--- a/pytest.ini
+++ b/pytest.ini
@@ -16,4 +16,6 @@ markers =
     integration: Integration tests
     slow: Slow running tests
     requires_db: Tests that require database connection
+    performance: Performance and load tests
+    stress: Stress tests to find breaking points
 
